force-app/main/default/objects/ExtensionConfiguration__c/ExtensionConfiguration__c.object-meta.xml
<CustomObject>
    <description>Defines the configuration for a specific extension.</description>
    <label>Extension Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extension Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>