force-app/main/default/objects/ExtensionConfiguration__c/fields/ExtensionApplication__c.field-meta.xml
<CustomField>
    <fullName>ExtensionApplication__c</fullName>
    <inlineHelpText>Select the Copado Phase based on the Extension Tool you want to use. For example, if you select Test, the Extension Tool picklist will list the available Tools for that specific phase, e.g. Copado Robotic Test, Apex tests, or SCA tools such as PMD or Codescan.</inlineHelpText>
    <label>Copado Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>