force-app/main/default/objects/ExtensionConfiguration__c/fields/ExtensionTool__c.field-meta.xml
<CustomField>
    <fullName>ExtensionTool__c</fullName>
    <label>Extension Tool</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Tests</fullName>
            </value>
            <value>
                <fullName>PMD</fullName>
            </value>
            <value>
                <fullName>Copado Robotic Testing</fullName>
            </value>
            <value>
                <fullName>CCH</fullName>
            </value>
            <value>
                <fullName>ApexTest</fullName>
                <isActive>false</isActive>
                <label>ApexTest</label>
            </value>
            <value>
                <fullName>CRT</fullName>
                <isActive>false</isActive>
                <label>CRT</label>
            </value>
            <value>
                <fullName>MC Mock Tool</fullName>
                <isActive>false</isActive>
                <label>MC Mock Tool</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>