force-app/main/default/objects/ExtensionConfiguration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Deprecated</description>
    <label>Status - Deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Setup Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>