force-app/main/default/objects/ExtensionConfiguration__c/validationRules/PreventUpdatingExtensionTool.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUpdatingExtensionTool</fullName>
    <active>true</active>
    <description>This rule prevents users from modifying the Tool Configuration after the Extension Configuration is activated.</description>
    <errorConditionFormula>AND( Active__c , ISCHANGED( ExtensionTool__c ) )</errorConditionFormula>
    <errorMessage>This Extension Tool cannot be modified. Please create a new Extension Configuration record instead.</errorMessage>
</ValidationRule>